# NovelCrawl

./: .gitignore  agent_pc.py  main.py  pyproject.poetry.toml  pyproject.toml  txt_download.py  txt_download_dd.py  txt_download_dingdianxsw.py  txt_download_lewen.py  txt_download_playwright.py  txt_download_x23us  txt_download_x23us.py  txt_download_zhangjie.py  utils.py
