[tool.poetry]
name = "NovelCrawl"
version = "0.1.0"
description = ""
authors = ["铂屑 <1824390830@qq.com>"]

[tool.poetry.dependencies]
python = "~3.11.3"
lxml = "^4.9.2"
httpx = "^0.24.1"
beautifulsoup4 = "^4.12.2"
soupsieve = "^2.4.1"
playwright = "^1.35.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
priority = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
