[project]
name = "novelcrawl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "铂屑", email = "80164656+boxie123@users.noreply.github.com" }
]
dependencies = [
    "lxml>=6.0.0",
    "beautifulsoup4>=4.13.4",
    "playwright>=1.53.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/novelcrawl"]
